--- a/static/style.css
+++ b/static/style.css
@@ -187,7 +187,7 @@ a.article:hover {
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
-@media screen and (max-width : 1920px){
+@media (min-width : 769px){
   #headerDiv{
       display:none;
   }
