--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,12 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+.projectImg{
+    padding: 5px 25% 15px;
+    text-align: center;
+    height: 70px;
+    width: auto;
+}
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
@@ -62,7 +68,7 @@ a:focus {
     width: 100%;
     height: 1px;
     border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
+    margin: 20px 0;
 }
 
 /* ---------------------------------------------------
