--- a/static/style.css
+++ b/static/style.css
@@ -179,6 +179,14 @@ a.article:hover {
     color: #000 !important;
 }
 
+ul {
+    font-family: 'Poppins', aria;
+    font-size: 0.9em;
+    font-weight: 300;
+    line-height: 1.6em;
+    color: #524e4e;
+}
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
